# dbt-optimizer

./: README.md  pyproject.toml
.claude/: settings.local.json
dbt_optimizer/: __init__.py  ai_analyzer.py  cli.py  mcp_client.py  models.py  project.py  reporter.py
dbt_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dbt_optimizer/rules/: __init__.py  base.py  lineage_rules.py  sql_rules.py
tests/: test_rules.py
tests/fixtures/sample_project/: dbt_project.yml
tests/fixtures/sample_project/models/marts/: fct_orders.sql
tests/fixtures/sample_project/models/staging/: schema.yml  stg_orders.sql
